@@ -1,17 +1,8 @@
-module DevisePermittedParameters
-  extend ActiveSupport::Concern
+before_action :configure_permitted_parameters, if: :devise_controller?
 
-  included do
-    before_action :configure_permitted_parameters
-  end
+protected
 
-  protected
-
-  def configure_permitted_parameters
-    devise_parameter_sanitizer.permit(:sign_up, keys: [:name])
-    devise_parameter_sanitizer.permit(:account_update, keys: [:name])
-  end
-
+def configure_permitted_parameters
+  devise_parameter_sanitizer.permit(:sign_up, keys: [:name])
+  devise_parameter_sanitizer.permit(:account_update, keys: [:name])
 end
-
-DeviseController.send :include, DevisePermittedParameters
