@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.6.5"
+  VERSION = "0.6.6"
 end
