@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h4. 0.6.6 October 3, 2016
+
+* move Devise permitted parameters from initializer to application controller (fix https://github.com/RailsApps/rails-devise/issues/17)
+
 h4. 0.6.5 October 1, 2016
 
 * fix 'devise_permitted_parameters.rb' file per https://github.com/plataformatec/devise#strong-parameters
